Added support for lombok, Enhance for imports, change get method nam to "is" for boolean.